--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <span class="inline">London is the capital and largest city of both England and the United Kingdom, with a population of 8,866,180 in 2022.</span> <span class="inline">Its wider metropolitan area is the largest in Western Europe, with a population of 14.9 million.</span> <span class="inline">London stands on the River Thames in southeast England, at the head of a 50-mile (80 km) tidal estuary down to the North Sea, and has been a major settlement for nearly 2,000 years.</span>
         </div>
     </div>
+    <div class="box-content">Box-sizing:content-box</div>
+    <div class="box-border">Box-sizing:border-box</div>
 </body>
 
 </html>
